# OperatingSystems

./: .gitignore  README.md
bst/: CMakeLists.txt  bst.c  main.c
cw01/: CMakeLists.txt  clean.sh  results.txt  runner.sh  tester.sh
cw01/zad1/: CMakeLists.txt  list.c  list.h  person.c  person.h  tree.c  tree.h
cw01/zad2_3/: CMakeLists.txt  main.c  main_dynamic.c
cw01/zad4/: gdb.txt
cw02/: CMakeLists.txt  runner.sh
cw02/zad1/: CMakeLists.txt  builder.sh  generate.c  runner.sh  sort_shuffle.c  sort_shuffle.h  tester.sh  tstcp.sh  wyniki.txt
cw02/zad2/: CMakeLists.txt  tester.sh  tree.c  tree.h  tree_norm.c  tree_norm.h
cw02/zad3/: CMakeLists.txt  lock.c  lock.h  tester.sh
cw03/: CMakeLists.txt  dane.txt  runner.sh  tester.sh
cw03/zad1/: CMakeLists.txt  dane1.txt  interpreter.c  interpreter.h  test.c
cw03/zad2/: CMakeLists.txt  dane2.txt  interpreter_limit.c  interpreter_limit.h  test2.c
cw04/: CMakeLists.txt
cw04/zad1/: CMakeLists.txt  printer.c
cw04/zad2/: CMakeLists.txt  child.c  dwa.c
cw04/zad3/: CMakeLists.txt  trzy.c
cw04_v2/: CMakeLists.txt  runner.sh
cw04_v2/zad2/: CMakeLists.txt
cw05/: CMakeLists.txt  core  in.txt  runner.sh  tester.sh
cw05/zad1/: CMakeLists.txt  pipes.c
cw05/zad2/: CMakeLists.txt  master.c  slave.c
cw06/: CMakeLists.txt
cw06/zad1/: CMakeLists.txt  client.c  server.c  server.h
cw06/zad2/: CMakeLists.txt  client2.c  server2.c  server2.h
cw08-js/: CMakeLists.txt  runner.sh
cw08-js/zad1/: CMakeLists.txt  generator.c  prog_a.c  prog_b.c  prog_c.c
cw08-js/zad2/: CMakeLists.txt  generator.c  generator2.c  prog_21.c  prog_22.c  prog_23.c  prog_24.c  prog_25.c  prog_2b.c  zad2.raport
cw09/: CMakeLists.txt  in.txt  in1.txt  in2.txt  runner.sh  tester.sh
cw09/zad1/: CMakeLists.txt  bounded.h  main.c
cw09/zad2/: CMakeLists.txt  pbounded.h  pmain.c
lab8/: CMakeLists.txt  copier.sh
lab8/images/: fil.txt  in.txt
lab8/zad1/: CMakeLists.txt  fft.h  main.c
zestaw1_tmp/: CMakeLists.txt  lista.c  main.c
