cmake_minimum_required(VERSION 2.9)
project(cw08)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall")

set(SOURCE_FILES_GENERATOR generator.c)
set(SOURCE_FILES_PROGRAM2A1 program2a1.c)
set(SOURCE_FILES_PROGRAM2A2 program2a2.c)
set(SOURCE_FILES_PROGRAM2A3 program2a3.c)
set(SOURCE_FILES_PROGRAM2A4 program2a4.c)
set(SOURCE_FILES_PROGRAM2A5 program2a5.c)
set(SOURCE_FILES_PROGRAM2B program2b.c)

add_executable(generator2 ${SOURCE_FILES_GENERATOR})
add_executable(program2a1 ${SOURCE_FILES_PROGRAM2A1})
add_executable(program2a2 ${SOURCE_FILES_PROGRAM2A2})
add_executable(program2a3 ${SOURCE_FILES_PROGRAM2A3})
add_executable(program2a4 ${SOURCE_FILES_PROGRAM2A4})
add_executable(program2a5 ${SOURCE_FILES_PROGRAM2A5})
add_executable(program2b ${SOURCE_FILES_PROGRAM2B})

target_link_libraries(program2a1 pthread)
target_link_libraries(program2a2 pthread)
target_link_libraries(program2a3 pthread)
target_link_libraries(program2a4 pthread)
target_link_libraries(program2a5 pthread)
target_link_libraries(program2b pthread)

install(TARGETS program2a1 DESTINATION ./zad2)
install(TARGETS program2a2 DESTINATION ./zad2)
install(TARGETS program2a3 DESTINATION ./zad2)
install(TARGETS program2a4 DESTINATION ./zad2)
install(TARGETS program2a5 DESTINATION ./zad2)
install(TARGETS program2b DESTINATION ./zad2)
install(TARGETS generator2 DESTINATION ./zad2)
