cmake_minimum_required(VERSION 2.9)
project(cw08)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall")

set(SOURCE_FILES_GENERATOR2 generator2.c)
set(SOURCE_FILES_PROGRAM21 prog_21.c)
set(SOURCE_FILES_PROGRAM22 prog_22.c)
set(SOURCE_FILES_PROGRAM23 prog_23.c)
set(SOURCE_FILES_PROGRAM24 prog_24.c)
set(SOURCE_FILES_PROGRAM25 prog_25.c)
set(SOURCE_FILES_PROGRAM2B prog_2b.c)

add_executable(generator2 ${SOURCE_FILES_GENERATOR2})
add_executable(program_a1 ${SOURCE_FILES_PROGRAM21})
add_executable(program_a2 ${SOURCE_FILES_PROGRAM22})
add_executable(program_a3 ${SOURCE_FILES_PROGRAM23})
add_executable(program_a4 ${SOURCE_FILES_PROGRAM24})
add_executable(program_a5 ${SOURCE_FILES_PROGRAM25})
add_executable(program_2b ${SOURCE_FILES_PROGRAM2B})

target_link_libraries(program_a1 pthread)
target_link_libraries(program_a2 pthread)
target_link_libraries(program_a3 pthread)
target_link_libraries(program_a4 pthread)
target_link_libraries(program_a5 pthread)
target_link_libraries(program_2b pthread)

install(TARGETS program_a1 DESTINATION ./zad2)
install(TARGETS program_a2 DESTINATION ./zad2)
install(TARGETS program_a3 DESTINATION ./zad2)
install(TARGETS program_a4 DESTINATION ./zad2)
install(TARGETS program_a5 DESTINATION ./zad2)
install(TARGETS program_2b DESTINATION ./zad2)
install(TARGETS generator2 DESTINATION ./zad2)
